--- a/views/nfc_p_drug.html
+++ b/views/nfc_p_drug.html
@@ -93,7 +93,7 @@
                             <div class="input-group-prepend">
                             <span class="input-group-text" ><i class="far fa-calendar-times"></i></span>
                             </div>
-                            <input type="text" class="form-control" id="d_expire" name="d_expire" oninvalid="this.setCustomValidity('วันหมดอายุ')" required oninput="this.setCustomValidity('')" placeholder="วันหมดอายุ">
+                            <input type="date" data-date-format="DD MMMM YYYY" class="form-control" id="d_expire" name="d_expire" oninvalid="this.setCustomValidity('วันหมดอายุ')" required oninput="this.setCustomValidity('')" placeholder="วันหมดอายุ">
                         </div>
                     </div>
                     <div class="col-md-12 mb-12">
@@ -148,6 +148,9 @@
 	
 
 	// ------------------------- function -------------------------//
+	$("#d_expire").change(()=>{
+		console.log($("#d_expire").val());
+	});
 	$(document).on('keypress',function(e) {
 	    if(e.which == 13) {
 	        if($("#frm_mode").val()==2){
@@ -192,7 +195,7 @@
 				}
 			}).done((res)=>{
 				var data=JSON.parse(res);
-				
+				console.log(data);
 				if(!data.msg){
 					$.each(data,(i, item)=>{
 						
@@ -306,7 +309,7 @@
 			}).done((res)=>{
 				var data=JSON.parse(res);
 				if(!data.msg){
-					console.log(data);
+					// console.log(data);
 					$.each(data,(i, item)=>{
 						let css=`style="background-color:#98afc9;color:#fff"`;
 						let row=(page==1?parseInt(i)+1:(parseInt(i)+1)+(page-1)*10);
